--- a/css/style.css
+++ b/css/style.css
@@ -104,6 +104,7 @@ vertical-align:middle;
 
 main{
   margin: 20px;
+  line-height: 1,5;
   font-size: 13px;
 }
 .txt{
@@ -114,7 +115,7 @@ main{
   /*height: 500px;*/
   margin: 20px 0 0;
   padding: 10px;
-  line-height: 1.5;
+  /*line-height: 1.5;*/
   background: #FADFDF;
   color: #4C5A92;
   font-size: 13px;
