--- a/css/style.css
+++ b/css/style.css
@@ -110,13 +110,12 @@ main{
   margin: 20px 0 0;
 }
 .output{
-  /*width: 100%;*/
-  /*height: 500px;*/
+  width: 100%;
   margin: 20px 0 0;
-  padding: 10px;
+  padding: 20px 0;
   /*line-height: 1.5;*/
-  background: #FADFDF;
-  color: #4C5A92;
+  border-top: #343453 1px solid;
+  color: #343453;
   font-size: 13px;
 }
 
@@ -126,5 +125,5 @@ main{
   padding: 0 2px;
   background: #B8D3F3;
   font-weight: bold;
-  color: #31395A;
+  color: #343453;
 }
